--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "style.less",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lessc -w style.less style.css"
+    "dev": "lessc style.less style.css"
   },
   "repository": {
     "type": "git",
